--- a/appveyor.yml
+++ b/appveyor.yml
@@ -14,14 +14,14 @@ environment:
       # For this package-template, we include examples of Cython modules,
       # so Cython is required for testing. If your package does not include
       # Cython code, you can set CONDA_DEPENDENCIES=''
-      CONDA_DEPENDENCIES: "sunpy"
+      CONDA_DEPENDENCIES: "scipy sunpy beautifulsoup4"
 
       # Conda packages for affiliated packages are hosted in channel
       # "astropy" while builds for astropy LTS with recent numpy versions
       # are in astropy-ci-extras. If your package uses either of these,
       # add the channels to CONDA_CHANNELS along with any other channels
       # you want to use.
-      # CONDA_CHANNELS: "astropy-ci-extras astropy"
+      CONDA_CHANNELS: "astropy-ci-extras astropy conda-forge"
 
   matrix:
 
