--- a/.travis.yml
+++ b/.travis.yml
@@ -75,7 +75,7 @@ matrix:
 
         # Now try Astropy dev and LTS vesions with the latest 3.x and 2.7.
         - os: linux
-          env: ASTROPY_VERSION=development SUNPY_VERSION=development
+          env: ASTROPY_VERSION=development SUNPY=development
                EVENT_TYPE='pull_request push cron'
         - os: linux
           env: ASTROPY_VERSION=development
@@ -111,7 +111,7 @@ install:
 
     - git clone git://github.com/astropy/ci-helpers.git
     - source ci-helpers/travis/setup_conda.sh
-    - if [[ $SUNPY_VERSION == dev* ]]; then conda remove sunpy --force; $PIP_INSTALL git+https://github.com/sunpy/sunpy.git#egg=sunpy --upgrade --no-deps; fi
+    - if [[ $SUNPY == dev* ]]; then conda remove sunpy --force; $PIP_INSTALL git+https://github.com/sunpy/sunpy.git#egg=sunpy --upgrade --no-deps; fi
     # As described above, using ci-helpers, you should be able to set up an
     # environment with dependencies installed using conda and pip, but in some
     # cases this may not provide enough flexibility in how to install a
