--- a/.travis.yml
+++ b/.travis.yml
@@ -111,7 +111,7 @@ install:
 
     - git clone git://github.com/astropy/ci-helpers.git
     - source ci-helpers/travis/setup_conda.sh
-    - if [[ $SUNPY == dev* ]]; then conda remove sunpy --force; $PIP_INSTALL git+https://github.com/sunpy/sunpy.git#egg=sunpy --upgrade --no-deps; fi
+    - if [[ $SUNPY == dev* ]]; then conda remove sunpy --force --no-pin; $PIP_INSTALL git+https://github.com/sunpy/sunpy.git#egg=sunpy --upgrade --no-deps; fi
     # As described above, using ci-helpers, you should be able to set up an
     # environment with dependencies installed using conda and pip, but in some
     # cases this may not provide enough flexibility in how to install a
