Rename to radiospectra

--- a/setup.cfg
+++ b/setup.cfg
@@ -37,7 +37,7 @@ select = E101,W191,W291,W292,W293,W391,E111,E112,E113,E901,E902
 exclude = extern,sphinx,*parsetab.py
 
 [metadata]
-package_name = sunpyspectra
+package_name = radiospectra
 description = spectra
 long_description = 
 author = SunPy Developers
@@ -45,7 +45,7 @@ author_email =
 license = BSD 3-Clause
 url = http://sunpy.org
 edit_on_github = False
-github_project = sunpy/spectra
+github_project = sunpy/radiospectra
 # version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
 version = 0.0.dev
 
