--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -4,9 +4,9 @@ include CHANGES.rst
 include ez_setup.py
 include ah_bootstrap.py
 include setup.cfg
-include sunpyspectra/tests/coveragerc
+include radiospectra/tests/coveragerc
 
-recursive-include sunpyspectra *.pyx *.c *.pxd
+recursive-include radiospectra *.pyx *.c *.pxd
 recursive-include docs *
 recursive-include licenses *
 recursive-include cextern *
