Update bits on setup (copied from SunPy)

--- a/setup.cfg
+++ b/setup.cfg
@@ -14,9 +14,10 @@ show-response = 1
 
 [tool:pytest]
 minversion = 3.0
-norecursedirs = build docs/_build
+testpaths = "radiospectra"
+norecursedirs = ".tox" "build" "docs" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "astropy_helpers"
 doctest_plus = enabled
-addopts = -p no:warnings
+addopts = -p no:warnings --doctest-rst
 
 [ah_bootstrap]
 auto_use = True
