--- a/setup.cfg
+++ b/setup.cfg
@@ -39,16 +39,16 @@ exclude = extern,sphinx,*parsetab.py
 
 [metadata]
 package_name = radiospectra
-description = spectra
+description = radio spectra capabilities for SunPy
 long_description = 
 author = SunPy Developers
 author_email = 
-license = BSD 3-Clause
+license = BSD 2-Clause
 url = http://sunpy.org
 edit_on_github = False
 github_project = sunpy/radiospectra
 # version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
-version = 0.0.dev
+version = 0.1.2
 
 [entry_points]
 
