All with the correct license!!

--- a/setup.cfg
+++ b/setup.cfg
@@ -40,7 +40,7 @@ exclude = extern,sphinx,*parsetab.py
 [metadata]
 package_name = radiospectra
 description = spectra
-long_description = 
+long_description = radio spectra capabilities for SunPy
 author = SunPy Developers
 author_email = 
 license = BSD 3-Clause
