--- a/.pep8speaks.yml
+++ b/.pep8speaks.yml
@@ -1,9 +1,11 @@
 pycodestyle:
-  max-line-length: 100 # Default is 79 in PEP8
-
-exclude:
-  - setup.py
-  - ez_setup.py
-  - ah_bootstrap.py
-  - astropy_helpers/
-  - docs/conf.py
+  max-line-length: 100
+  exclude:
+    - setup.py
+    - ez_setup.py
+    - ah_bootstrap.py
+    - astropy_helpers/
+    - docs/conf.py
+    - sunpy/cm/color_tables.py
+  descending_issues_order: True
+  only_mention_files_with_errors: True
