--- a/tox.ini
+++ b/tox.ini
@@ -1,19 +1,26 @@
 [tox]
-envlist = py34,py35,py36
+envlist = py{27,36,37}-{offline,online,sunpydev},build_docs
+isolated_build=True
+
 [testenv]
-deps=
- pytest
- numpy
- beautifulsoup4
- suds-jurko
- sunpy
-commands=
- pip install pytest-cov
- pip install mock
- pip install pytest-mock
- pip install scipy
- pip install matplotlib
- pip install astropy
- pip install sunpy
- python setup.py develop
- py.test --cov-report html --cov sunpy --junitxml=result.xml --pyargs sunpy.tests
+changedir = tmp
+setenv =
+    MPLBACKEND = agg
+    COLUMNS = 180
+    PYTEST_COMMAND = pytest --pyargs radiospectra --cov=radiospectra --cov-config={toxinidir}/setup.cfg --verbose -m "not figure" --durations=25
+extras = all
+deps =
+    sunpydev: git+git://github.com/sunpy/sunpy
+    pytest-xdist
+    pytest-sugar
+    online: pytest-rerunfailures
+    online: pytest-timeout
+commands =
+    offline,sunpydev: {env:PYTEST_COMMAND} {posargs}
+    online: {env:PYTEST_COMMAND} --timeout=180 --remote-data=any {posargs} {toxinidir}/docs
+
+[testenv:build_docs]
+basepython = python3.7
+changedir = {toxinidir}
+extras = all,docs
+commands = sphinx-build docs docs/_build/html -W -b html
