--- a/setup.cfg
+++ b/setup.cfg
@@ -9,7 +9,7 @@ license = BSD 2-Clause
 url = https://sunpy.org
 edit_on_github = True
 github_project = sunpy/radiospectra
-install_requires = sunpy
+install_requires = sunpy, bs4
 # Extra Requirements
 extra_requires = tests, docs
 tests_requires = pytest, pytest-cov, pytest-astropy
