--- a/setup.cfg
+++ b/setup.cfg
@@ -1,7 +1,8 @@
 
 [metadata]
+name = spectra
 package_name = radiospectra
-description = spectra
+description = Provide support for some type of radio spectra on solar physics
 long_descripton = file: README.rst
 author = SunPy Developers
 author_email = sunpy@googlegroups.com
