--- a/tox.ini
+++ b/tox.ini
@@ -13,6 +13,7 @@ deps =
     sunpydev: git+git://github.com/sunpy/sunpy
     pytest-xdist
     pytest-sugar
+    pytest-cov
     online: pytest-rerunfailures
     online: pytest-timeout
 commands =
