--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -2,8 +2,8 @@ include README.rst
 include CHANGES.rst
 include LICENSE
 
-include ez_setup.py
 include ah_bootstrap.py
+include setup.py
 include setup.cfg
 include radiospectra/tests/coveragerc
 
