--- a/setup.cfg
+++ b/setup.cfg
@@ -10,7 +10,7 @@ license = BSD 2-Clause
 url = https://sunpy.org
 edit_on_github = True
 github_project = sunpy/radiospectra
-install_requires = sunpy, bs4, future
+install_requires = sunpy, bs4, lxml
 # Extra Requirements
 extra_requires = tests, docs
 tests_requires = pytest, pytest-cov, pytest-astropy
