Fix for upstream SunPy changes for 1.0

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist = py{27,36,37}-{offline,online,sunpydev},build_docs
-isolated_build=True
+isolated_build=False
 
 [testenv]
 changedir = tmp
