--- a/setup.cfg
+++ b/setup.cfg
@@ -16,7 +16,7 @@ extra_requires = tests, docs
 tests_requires = pytest, pytest-cov, pytest-astropy
 docs_requires = sphinx, sunpy-sphinx-theme, sphinx-astropy
 # version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
-version = 0.2.0.dev
+version = 0.2.0
 # Note: you will also need to change this in your package's __init__.py
 minimum_python_version = 2.7
 
