Update package template, remove astropy helpers.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,64 +1,64 @@
-
 [metadata]
-name = spectra
-package_name = radiospectra
-description = Provide support for some type of radio spectra on solar physics
-long_descripton = file: README.rst
+name = radiospectra
 author = SunPy Developers
 author_email = sunpy@googlegroups.com
 license = BSD 2-Clause
+license_file = LICENSE.rst
 url = https://sunpy.org
-edit_on_github = True
-github_project = sunpy/radiospectra
-install_requires = sunpy, bs4, lxml
-# Extra Requirements
-extra_requires = tests, docs
-tests_requires = pytest, pytest-cov, pytest-astropy
-docs_requires = sphinx, sunpy-sphinx-theme, sphinx-astropy
-# version should be PEP386 compatible (http://www.python.org/dev/peps/pep-0386)
-version = 0.2.0
-# Note: you will also need to change this in your package's __init__.py
-minimum_python_version = 2.7
+description = Provide support for some type of radio spectra in solar physics
+long_description = file: README.rst
 
-[ah_bootstrap]
-auto_use = True
+[options]
+zip_safe = False
+packages = find:
+python_requires = >=3.6
+setup_requires = setuptools_scm
+install_requires =
+  sunpy
+  bs4
+  beautifulsoup4
+  lxml
 
-[build_docs]
-source-dir = docs
-build-dir = docs/_build
-all_files = 1
+
+[options.extras_require]
+test =
+    pytest-doctestplus >= 0.5
+    pytest
+    pytest-astropy >= 0.8
+    pytest-cov
+docs =
+    sphinx
+    sphinx-automodapi
+    towncrier
+    sunpy-sphinx-theme
+
+
+[options.package_data]
+radiospectra = data/*
 
 [tool:pytest]
-minversion = 3.0
 testpaths = "radiospectra" "docs"
-norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "astropy_helpers" "examples"
 doctest_plus = enabled
-doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
-addopts = -p no:warnings --doctest-rst -m "not figure"
-markers =
-    online: marks this test function as needing online connectivity.
-    figure: marks this test function as using hash-based Matplotlib figure verification. This mark is not meant to be directly applied, but is instead automatically applied when a test function uses the @sunpy.tests.helpers.figure_test decorator.
-# Disable internet access for tests not marked remote_data
+text_file_format = rst
+addopts = --doctest-rst
 remote_data_strict = True
 
-[pycodestyle]
-max_line_length = 100
-
-[flake8]
-max-line-length = 100
-
-[isort]
-line_length = 100
-not_skip = __init__.py
-sections = FUTURE, STDLIB, THIRDPARTY, ASTROPY, FIRSTPARTY, LOCALFOLDER
-default_section = THIRDPARTY
-known_first_party = radiospectra
-known_astropy = astropy, asdf, sunpy
-multi_line_output = 0
-balanced_wrapping = True
-include_trailing_comma = False
-length_sort = False
-length_sort_stdlib = True
+[coverage:run]
+omit =
+  radiospectra/_sunpy_init*
+  radiospectra/conftest.py
+  radiospectra/*setup_package*
+  radiospectra/tests/*
+  radiospectra/*/tests/*
+  radiospectra/extern/*
+  radiospectra/version*
+  */radiospectra/_sunpy_init*
+  */radiospectra/conftest.py
+  */radiospectra/*setup_package*
+  */radiospectra/tests/*
+  */radiospectra/*/tests/*
+  */radiospectra/extern/*
+  */radiospectra/version*
 
 [coverage:report]
 exclude_lines =
@@ -73,3 +73,5 @@ exclude_lines =
   def main\(.*\):
   # Ignore branches that don't pertain to this version of Python
   pragma: py{ignore_python_version}
+  # Don't complain about IPython completion helper
+  def _ipython_key_completions_
