--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,36 +1,68 @@
+name: $(BuildDefinitionName)_$(Date:yyyyMMdd)$(Rev:.rr)
 variables:
-  Agent.Source.Git.ShallowFetchDepth: 1
   CI_NAME: Azure Pipelines
   CI_BUILD_ID: $(Build.BuildId)
-  CI_BUILD_URL: "https://dev.azure.com/sunpy/sunpy/_build/results?buildId=$(Build.BuildId)"
+  CI_BUILD_URL: "https://dev.azure.com/sunpy/radiospectra/_build/results?buildId=$(Build.BuildId)"
+  CIBW_BUILD: cp36-* cp37-* cp38-*
+  CIBW_SKIP: "*-win32 *-manylinux1_i686"
+
+resources:
+  repositories:
+  - repository: OpenAstronomy
+    type: github
+    endpoint: ?????
+    name: OpenAstronomy/azure-pipelines-templates
+    ref: master
+
+trigger:
+  branches:
+    include:
+    - '*'
+    exclude:
+    - '*backport*'
+  tags:
+    include:
+    - 'v*'
+    exclude:
+    - '*dev*'
+    - '*pre*'
+    - '*post*'
 
 jobs:
-- template: azure-templates.yml
+- template: run-tox-env.yml@OpenAstronomy
   parameters:
-    name: Linux_27_offline
-    os: linux
-    tox: py27-offline -- -vvv
+    submodules: false
+    coverage: codecov
+    envs:
+      - macos: py36
+        name: py36_test
 
-- template: azure-templates.yml
-  parameters:
-    name: macOS_37_offline
-    os: macos
-    tox: py37-offline --
+      - windows: py37
+        name: py37_test
 
-- template: azure-templates.yml
-  parameters:
-    name: Windows_36_offline
-    os: windows
-    tox: py36-offline --
+      - linux: py38
+        name: py38_test
 
-- template: azure-templates.yml
-  parameters:
-    name: Linux_37_online
-    os: linux
-    tox: py37-online --
+      - linux: codestyle
+        name: codestyle
 
-- template: azure-templates.yml
-  parameters:
-    name: Linux_37_sunpydev
-    os: linux
-    tox: py37-sunpydev --
+
+# On branches which aren't master, and not Pull Requests, build the wheels but only upload them on tags
+- ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), not(contains(variables['Build.SourceBranch'], 'master'))) }}:
+  - template: publish.yml@OpenAstronomy
+    parameters:
+      # Only Upload to PyPI on tags
+      ${{ if startsWith(variables['Build.SourceBranch'], 'refs/tags/') }}:
+        pypi_connection_name : 'PyPI'
+
+      test_extras: 'test'
+      test_command: 'pytest -p no:warnings --doctest-rst -m "not figure" --pyargs radiospectra'
+      submodules: false
+      targets:
+        - wheels_linux
+        - wheels_macos
+        - sdist
+      dependsOn:
+        - py36_test
+        - py37_test
+        - py38_test
