--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,56 +1,16 @@
 [build-system]
-requires = ["setuptools", "setuptools_scm", "wheel"]
 
-[ tool.sunpy-bot ]
-  # disable astropy checks
-  changelog_check = false
-  autoclose_stale_pull_request = false
+requires = ["setuptools",
+            "setuptools_scm",
+            "wheel"]
 
-  # SunPy Checks
-  check_towncrier_changelog = true
-  check_milestone = true
-  post_pr_comment = true
-
-  all_passed_message = """
-
-  Thanks for the pull request @{pr_handler.user}! Everything looks great!
-"""
-
-  [ tool.sunpy-bot.towncrier_changelog ]
-    verify_pr_number = true
-    changelog_skip_label = "No Changelog Entry Needed"
-    help_url = "https://github.com/Cadair/sunpy/blob/towncrier/changelog/README.rst"
-
-    missing_file_message = """
-
-
-* I didn't detect a changelog file in this pull request. Please add a changelog file to the `changelog/` directory following the instructions in the changelog [README](https://github.com/sunpy/sunpy/blob/master/changelog/README.rst).
-"""
-    wrong_type_message = """
-
-
-* The changelog file you added is not one of the allowed types. Please use one of the types described in the changelog [README](https://github.com/sunpy/sunpy/blob/master/changelog/README.rst)
-"""
-
-    wrong_number_message = """
-
-
-* The number in the changelog file you added does not match the number of this pull request. Please rename the file.
-"""
-
-  [ tool.sunpy-bot.milestone_checker ]
-
-    missing_message = """
-
-
-* This pull request does not have a milestone assigned to it. Only maintainers can change this, so you don't need to worry about it. :smile:
-"""
+build-backend = 'setuptools.build_meta'
 
 [tool.towncrier]
-    package = "sunpy"
+    package = "radiospectra"
     filename = "CHANGELOG.rst"
     directory = "changelog/"
-    issue_format = "`#{issue} <https://github.com/sunpy/sunpy/pull/{issue}>`__"
+    issue_format = "`#{issue} <https://github.com/sunpy/radiospectra/pull/{issue}>`__"
 
     [[tool.towncrier.type]]
         directory = "breaking"
