--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 __pycache__/
 *.py[cod]
 *$py.class
+tmp/
 
 # C extensions
 *.so
@@ -27,7 +28,6 @@ wheels/
 .installed.cfg
 *.egg
 MANIFEST
-radiospectra/version.py
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
@@ -199,25 +199,31 @@ $RECYCLE.BIN/
 
 ### VScode: https://raw.githubusercontent.com/github/gitignore/master/Global/VisualStudioCode.gitignore
 .vscode/*
+.vs/*
 
-### Extra Python Items and SunPy Specific
+### Extra Python Items and radiospectra Specific
 .hypothesis
 .pytest_cache
-sunpydata.sqlite
-sunpydata.sqlite-journal
-sunpy/_compiler.c
-sunpy/cython_version.py
+radiospectra/_compiler.c
+radiospectra/cython_version.py
 docs/_build
 docs/generated
 docs/api/
 docs/whatsnew/latest_changelog.txt
 examples/**/*.asdf
+examples/**/*.csv
 # This is incase you run the figure tests
 figure_test_images*
 tags
+radiospectra/version.py
 
 ### Pycharm(?)
 .idea
 
 # Release script
 .github_cache
+
+# Misc Stuff
+.history
+*.orig
+.tmp
