--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,16 +1,18 @@
 name: $(BuildDefinitionName)_$(Date:yyyyMMdd)$(Rev:.rr)
-variables:
-  CI_NAME: Azure Pipelines
-  CI_BUILD_ID: $(Build.BuildId)
-  CI_BUILD_URL: "https://dev.azure.com/sunpy/radiospectra/_build/results?buildId=$(Build.BuildId)"
-  CIBW_BUILD: cp36-* cp37-* cp38-*
-  CIBW_SKIP: "*-win32 *-manylinux1_i686"
+
+schedules:
+  - cron: "0 0 * * *"
+    displayName: Daily midnight build
+    branches:
+      include:
+      - master
+    always: true
 
 resources:
   repositories:
   - repository: OpenAstronomy
     type: github
-    endpoint: ?????
+    endpoint: sunpy
     name: OpenAstronomy/azure-pipelines-templates
     ref: master
 
@@ -33,19 +35,40 @@ jobs:
   parameters:
     submodules: false
     coverage: codecov
-    envs:
-      - macos: py36
-        name: py36_test
+    toxdeps: tox-pypi-filter
+    posargs: -n=4
+    libraries:
+      apt:
+        - libopenjp2-7
+        - graphviz
+      brew:
+        - openjpeg
+      yum:
+        - openssl-devel
+        - freetype-devel
+        - libpng-devel
 
+    envs:
+      - macos: py38
+        name: py38_test
       - windows: py37
         name: py37_test
 
-      - linux: py38
-        name: py38_test
+      - linux: py38-online
+        name: py38_test_online
 
       - linux: codestyle
-        name: codestyle
+        name: python_codestyle
+        pytest: false
 
+      - linux: conda
+        name: py38_conda
+        libraries: {}
+
+      - linux: py37-oldestdeps
+        name: py37_test_oldestdeps
+
+      - linux: py38-devdeps
 
 # On branches which aren't master, and not Pull Requests, build the wheels but only upload them on tags
 - ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), not(contains(variables['Build.SourceBranch'], 'master'))) }}:
@@ -54,15 +77,15 @@ jobs:
       # Only Upload to PyPI on tags
       ${{ if startsWith(variables['Build.SourceBranch'], 'refs/tags/') }}:
         pypi_connection_name : 'PyPI'
-
-      test_extras: 'test'
+      test_extras: 'dev'
       test_command: 'pytest -p no:warnings --doctest-rst -m "not figure" --pyargs radiospectra'
       submodules: false
       targets:
-        - wheels_linux
-        - wheels_macos
+        - wheels_universal
         - sdist
       dependsOn:
-        - py36_test
         - py37_test
         - py38_test
+        - py38_test_online
+        - py37_test_oldestdeps
+        - py38_conda
