--- a/setup.cfg
+++ b/setup.cfg
@@ -1,47 +1,128 @@
 [metadata]
 name = radiospectra
-author = SunPy Developers
+provides = radiospectra
+description = "Provide support for some type of radio spectra in solar physics"
+long_description = file: README.rst
+long_description_content_type = text/x-rst
+author = The SunPy Community
 author_email = sunpy@googlegroups.com
 license = BSD 2-Clause
 license_file = LICENSE.rst
 url = https://sunpy.org
-description = Provide support for some type of radio spectra in solar physics
-long_description = file: README.rst
+edit_on_github = True
+github_project = sunpy/radiospectra
+platform = any
+keywords = solar physics, solar, science, sun, wcs, coordinates, radio, spectra
+classifiers =
+  Development Status :: 3 - Alpha
+  Intended Audience :: Science/Research
+  License :: OSI Approved :: BSD License
+  Natural Language :: English
+  Operating System :: OS Independent
+  Programming Language :: Python
+  Programming Language :: Python :: 3
+  Programming Language :: Python :: 3.7
+  Programming Language :: Python :: 3.8
+  Topic :: Scientific/Engineering :: Physics
 
 [options]
 zip_safe = False
+python_requires = >=3.7
 packages = find:
-python_requires = >=3.6
-setup_requires = setuptools_scm
+include_package_data = True
+setup_requires =
+  setuptools_scm
 install_requires =
-  sunpy
-  bs4
-  beautifulsoup4
-  lxml
-
+  sunpy[net]
 
 [options.extras_require]
-test =
-    pytest-doctestplus >= 0.5
-    pytest
-    pytest-astropy >= 0.8
-    pytest-cov
+tests =
+  pytest-astropy >= 0.8  # 0.8 is the first release to include filter-subpackage
+  pytest-doctestplus >= 0.5 # We require the newest version of doctest plus to use +IGNORE_WARNINGS
+  pytest-mock
+  tox
 docs =
-    sphinx
-    sphinx-automodapi
-    towncrier
-    sunpy-sphinx-theme
-
+  sphinx>=2
+  sphinx-automodapi
+  sphinx-gallery>=0.7.0 # First to include the mini-galleries directive
+  sunpy-sphinx-theme
+  towncrier
 
 [options.package_data]
 radiospectra = data/*
 
 [tool:pytest]
 testpaths = "radiospectra" "docs"
+norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".jupyter" ".history" "tools"
 doctest_plus = enabled
-text_file_format = rst
-addopts = --doctest-rst
+doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
+addopts = --doctest-rst -m "not figure" --doctest-ignore-import-errors
+markers =
+    remote_data: marks this test function as needing remote data.
+    online: marks this test function as needing online connectivity.
 remote_data_strict = True
+# Pin junit behaviour; we might want to update this to xunit2 at some point
+junit_family=xunit1
+filterwarnings =
+    error
+    error::sunpy.util.exceptions.SunpyDeprecationWarning
+    #
+    # A list of warnings to ignore follows. If you add to this list, you MUST
+    # add a comment or ideally a link to an issue that explains why the warning
+    # is being ignored
+    #
+    #
+    # See https://github.com/spacetelescope/asdf/issues/789
+    ignore:direct construction of AsdfSchemaFile has been deprecated
+    ignore:direct construction of AsdfSchemaItem has been deprecated
+    ignore:direct construction of AsdfSchemaExampleItem has been deprecated
+    # See https://github.com/Cadair/parfive/issues/41
+    ignore:The loop argument is deprecated
+    # These warnings are raised on travis due to something odd about numpy installation,
+    # but don't impact the tests
+    ignore:numpy.ufunc size changed:RuntimeWarning
+    # See https://github.com/mvantellingen/python-zeep/issues/956
+    ignore:defusedxml.lxml is no longer supported:DeprecationWarning
+    # See https://github.com/aio-libs/aiohttp/issues/4842
+    ignore:"@coroutine" decorator is deprecated
+    # See https://github.com/spacetelescope/asdf/issues/789
+    ignore:direct construction of AsdfSchemaFile has been deprecated
+    ignore:direct construction of AsdfSchemaItem has been deprecated
+    ignore:direct construction of AsdfSchemaExampleItem has been deprecated
+    # See https://github.com/scikit-image/scikit-image/issues/4848
+    ignore:Converting `np.inexact` or `np.floating` to a dtype is deprecated
+    # See https://github.com/astropy/astropy/pull/10570
+    ignore:leap-second auto-update failed
+    # See https://github.com/astropy/extension-helpers/issues/23
+    ignore:Distutils was imported before Setuptools
+    # toolz internal deprecation warning https://github.com/pytoolz/toolz/issues/500
+    ignore:The toolz.compatibility module is no longer needed:DeprecationWarning
+
+[pycodestyle]
+max_line_length = 100
+
+[flake8]
+max-line-length = 100
+exclude =
+    .git,
+    __pycache__,
+    docs/conf.py,
+    build,
+rst-directives =
+    plot
+
+[isort]
+balanced_wrapping = True
+skip=docs/conf.py
+default_section = THIRDPARTY
+include_trailing_comma = True
+known_astropy = astropy, asdf, sunpy
+length_sort = False
+length_sort_sections=stdlib
+line_length = 110
+multi_line_output = 3
+no_lines_before = LOCALFOLDER
+sections = STDLIB, THIRDPARTY, ASTROPY, FIRSTPARTY, LOCALFOLDER
 
 [coverage:run]
 omit =
