--- a/tox.ini
+++ b/tox.ini
@@ -1,32 +1,21 @@
 [tox]
 envlist =
-    py{36,37}
+    py{37,38}{,-oldestdeps,-devdeps,-online}
     build_docs
     codestyle
+    conda
 isolated_build = true
-# This is included for testing of the template. You can remove it safely.
-skip_missing_interpreters = True
-requires =
-    setuptools >= 30.3.0
-    pip >= 19.3.1
-    tox-pypi-filter >= 0.10
 
 [testenv]
-
-# The following option combined with the use of the tox-pypi-filter above allows
-# project-wide pinning of dependencies, e.g. if new versions of pytest do not
-# work correctly with pytest-astropy plugins. Most of the time the pinnings file
-# should be empty.
-pypi_filter_requirements = https://raw.githubusercontent.com/sunpy/package-template/master/sunpy_version_pins.txt
-
-# Pass through the following environemnt variables which may be needed for the CI
-passenv = HOME WINDIR LC_ALL LC_CTYPE CC CI TRAVIS
-
+pypi_filter = https://raw.githubusercontent.com/sunpy/sunpy/master/.test_package_pins.txt
+# We use bash in some of our environments so we have to whitelist it.
+whitelist_externals=
+    /bin/bash
+    /usr/bin/bash
 # Run the tests in a temporary directory to make sure that we don't import
-# the package from the source tree
+# sunpy from the source tree
 changedir = .tmp/{envname}
-
-# tox environments are constructued with so-called 'factors' (or terms)
+# tox environments are constructed with so-called 'factors' (or terms)
 # separated by hyphens, e.g. test-devdeps-cov. Lines below starting with factor:
 # will only take effect if that factor is included in the environment name. To
 # see a list of example environments that can be run, along with a description,
@@ -36,28 +25,78 @@ changedir = .tmp/{envname}
 #
 description =
     run tests
-
+    devdeps: with the latest developer version of key dependencies
+    oldestdeps: with the oldest supported version of key dependencies
+    online: that require remote data
+setenv =
+    MPLBACKEND = agg
+    COLUMNS = 180
+    PYTEST_COMMAND = pytest -vvv -s -ra --pyargs radiospectra --cov-report= --cov=radiospectra --cov-config={toxinidir}/setup.cfg {toxinidir}/docs
+    devdeps,build_docs,online: HOME = {envtmpdir}
+    SUNPY_SAMPLEDIR = {env:SUNPY_SAMPLEDIR:{toxinidir}/.tox/{envname}/sample_data/}
+passenv =
+    HTTP_PROXY
+    HTTPS_PROXY
+    NO_PROXY
+    CIRCLECI
 deps =
-# The following indicates which extras_require from setup.cfg will be installed
-extras =
-    test
-commands =
-    pytest --pyargs radiospectra {toxinidir}/docs --cov radiospectra --cov-config={toxinidir}/setup.cfg {posargs}
+    # We need this for some packages.
+    setuptools
+    # All our tests run in parallel which this plugin allows us to.
+    pytest-xdist
+    # Since xdist uses stdout in order for it to work, we have to bypass this and use to
+    # capture any logging we might put in a test for debugging.
+    pytest-logger
+    # The devdeps factor is intended to be used to install the latest developer version.
+    # of key dependencies.
+    devdeps: git+https://github.com/sunpy/sunpy
 
+    # Oldest deps we pin against.
+    oldestdeps: sunpy<2.1
+    # These are specific online extras we use to run the online tests.
+    online: pytest-rerunfailures
+    online: pytest-timeout
+# The following indicates which extras_require from setup.cfg will be installed
+# dev is special in that it installs everything
+extras =
+    dev
+commands =
+    !online-!hypothesis-!figure: {env:PYTEST_COMMAND} {posargs}
+    online: {env:PYTEST_COMMAND} --reruns 2 --timeout=180 --remote-data=any -m "remote_data" {posargs}
 
 [testenv:build_docs]
 changedir = docs
-description = invoke sphinx-build to build the HTML docs
-extras = docs
+description = Invoke sphinx-build to build the HTML docs
+extras = dev
 commands =
-    sphinx-build -W -b html . _build/html {posargs}
-
+    sphinx-build -j auto --color -W --keep-going -b html -d _build/.doctrees . _build/html {posargs}
+    python -c 'import pathlib; print("Documentation available under file://\{0\}".format(pathlib.Path(r"{toxinidir}") / "docs" / "_build" / "index.html"))'
 
 [testenv:codestyle]
+pypi_filter =
 skip_install = true
 description = Run all style and file checks with pre-commit
 deps =
     pre-commit
 commands =
     pre-commit install-hooks
-    pre-commit run --all-files
+    pre-commit run --verbose --all-files --show-diff-on-failure
+
+# This env requires tox-conda.
+[testenv:conda]
+pypi_filter =
+basepython = python3.8
+extras =
+deps =
+conda_deps =
+    pytest
+    pytest-astropy
+    pytest-cov
+    pytest-mock
+    pytest-xdist
+    sunpy
+conda_channels = conda-forge
+install_command = pip install --no-deps {opts} {packages}
+commands =
+    conda list
+    {env:PYTEST_COMMAND} {posargs}
