updated CI and py39 tests

--- a/tox.ini
+++ b/tox.ini
@@ -1,6 +1,6 @@
 [tox]
 envlist =
-    py{37,38}{,-oldestdeps,-devdeps,-online}
+    py{37,38,39}{,-oldestdeps,-devdeps,-online}
     build_docs
     codestyle
     conda
@@ -50,6 +50,11 @@ deps =
     # The devdeps factor is intended to be used to install the latest developer version.
     # of key dependencies.
     devdeps: git+https://github.com/sunpy/sunpy
+    devdeps: matplotlib
+    devdeps: scipy
+
+    # Until scikit-image 0.19 is out.
+    py39: numpy
 
     # Oldest deps we pin against.
     oldestdeps: sunpy<2.1
@@ -62,7 +67,7 @@ extras =
     dev
 commands =
     !online-!hypothesis-!figure: {env:PYTEST_COMMAND} {posargs}
-    online: {env:PYTEST_COMMAND} --reruns 2 --timeout=180 --remote-data=any -m "remote_data" {posargs}
+    online: {env:PYTEST_COMMAND} --reruns 2 --timeout=180 --remote-data=any {posargs}
 
 [testenv:build_docs]
 changedir = docs
