--- a/.gitignore
+++ b/.gitignore
@@ -212,10 +212,9 @@ docs/api/
 docs/whatsnew/latest_changelog.txt
 examples/**/*.asdf
 examples/**/*.csv
-# This is incase you run the figure tests
 figure_test_images*
 tags
-radiospectra/version.py
+radiospectra/_version.py
 
 ### Pycharm(?)
 .idea
