--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -30,62 +30,102 @@ trigger:
     - '*pre*'
     - '*post*'
 
-jobs:
-- template: run-tox-env.yml@OpenAstronomy
-  parameters:
-    submodules: false
-    coverage: codecov
-    toxdeps: tox-pypi-filter
-    posargs: -n=4
-    libraries:
-      apt:
-        - libopenjp2-7
-        - graphviz
-      brew:
-        - openjpeg
-      yum:
-        - openssl-devel
-        - freetype-devel
-        - libpng-devel
+pr:
+  autoCancel: true
 
-    envs:
-      - macos: py38
-        name: py38_test
-      - windows: py37
-        name: py37_test
+stages:
+  - stage: FirstPhaseTests
+    displayName: Core Tests
+    jobs:
+    - template: run-tox-env.yml@OpenAstronomy
+      parameters:
+        default_python: '3.8'
+        submodules: false
+        coverage: codecov
+        toxdeps: tox-pypi-filter
+        posargs: -n=4
 
-      - linux: py38-online
-        name: py38_test_online
+        libraries:
+          apt:
+            - libopenjp2-7
 
-      - linux: codestyle
-        name: python_codestyle
-        pytest: false
+        envs:
+          - linux: codestyle
+            name: style_check
+            pytest: false
+            libraries: {}
 
-      - linux: conda
-        name: py38_conda
-        libraries: {}
+          - linux: py38
 
-      - linux: py37-oldestdeps
-        name: py37_test_oldestdeps
+  - stage: SecondPhaseTests
+    displayName: Stage 2 Tests
+    dependsOn: FirstPhaseTests
+    jobs:
+    - template: run-tox-env.yml@OpenAstronomy
+      parameters:
+        default_python: '3.8'
+        submodules: false
+        coverage: codecov
+        toxdeps: tox-pypi-filter
+        posargs: -n=4
 
-      - linux: py38-devdeps
+        libraries:
+          apt:
+            - libopenjp2-7
+            - graphviz
+          brew:
+            - openjpeg
 
-# On branches which aren't master, and not Pull Requests, build the wheels but only upload them on tags
-- ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), not(contains(variables['Build.SourceBranch'], 'master'))) }}:
-  - template: publish.yml@OpenAstronomy
-    parameters:
-      # Only Upload to PyPI on tags
-      ${{ if startsWith(variables['Build.SourceBranch'], 'refs/tags/') }}:
-        pypi_connection_name : 'PyPI'
-      test_extras: 'dev'
-      test_command: 'pytest -p no:warnings --doctest-rst -m "not figure" --pyargs radiospectra'
-      submodules: false
-      targets:
-        - wheels_universal
-        - sdist
-      dependsOn:
-        - py37_test
-        - py38_test
-        - py38_test_online
-        - py37_test_oldestdeps
-        - py38_conda
+        envs:
+          - macos: py37
+
+          - windows: py39
+
+          - linux: build_docs
+            posargs: " "
+            pytest: false
+
+          - linux: py38-online
+
+          - linux: py37-oldestdeps
+
+          - linux: py38-conda
+            libraries: {}
+
+
+  - ${{ if or(eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual')) }}:
+    - stage: CronTests
+      displayName: Cron Tests
+      dependsOn: []  # Don't wait on other stages
+      jobs:
+      - template: run-tox-env.yml@OpenAstronomy
+        parameters:
+          default_python: '3.8'
+          submodules: false
+          coverage: codecov
+          toxdeps: tox-pypi-filter
+          posargs: -n=4
+
+          libraries:
+            apt:
+              - libopenjp2-7
+
+          envs:
+            - linux: py38-devdeps
+
+  # On branches which aren't master, and not Pull Requests, build the wheels but only upload them on tags
+  - ${{ if and(ne(variables['Build.Reason'], 'PullRequest'), or(ne(variables['Build.SourceBranchName'], 'master'), eq(variables['Build.Reason'], 'Schedule'), eq(variables['Build.Reason'], 'Manual'))) }}:
+    - stage: Release
+      dependsOn: SecondPhaseTests
+      jobs:
+      - template: publish.yml@OpenAstronomy
+        parameters:
+          # Only Upload to PyPI on tags
+          ${{ if startsWith(variables['Build.SourceBranch'], 'refs/tags/') }}:
+            pypi_connection_name : 'PyPI'
+          test_extras: 'dev'
+          test_command: 'pytest -p no:warnings --doctest-rst --pyargs radiospectra'
+          submodules: false
+          targets:
+            - wheels_universal
+            - sdist
