--- a/setup.cfg
+++ b/setup.cfg
@@ -35,11 +35,13 @@ setup_requires =
 install_requires =
   sunpy[net]
 
+[options.packages.find]
+exclude = radiospectra._dev
+
 [options.extras_require]
 tests =
   pytest-astropy >= 0.8  # 0.8 is the first release to include filter-subpackage
   pytest-doctestplus >= 0.5 # We require the newest version of doctest plus to use +IGNORE_WARNINGS
-  pytest-mock
   tox
 docs =
   sphinx>=2
@@ -53,10 +55,10 @@ radiospectra = data/*
 
 [tool:pytest]
 testpaths = "radiospectra" "docs"
-norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".jupyter" ".history" "tools"
+norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".jupyter" ".history" "tools" "radiospectra[\/]_dev"
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
-addopts = --doctest-rst -m "not figure" --doctest-ignore-import-errors
+addopts = --doctest-rst --doctest-ignore-import-errors
 markers =
     remote_data: marks this test function as needing remote data.
     online: marks this test function as needing online connectivity.
