--- a/setup.cfg
+++ b/setup.cfg
@@ -34,6 +34,9 @@ setup_requires =
   setuptools_scm
 install_requires =
   sunpy[net]>=2.1.rc3
+  numpy<1.20.0
+  matplotlib
+  scipy
 
 [options.packages.find]
 exclude = radiospectra._dev
