--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -10,6 +10,7 @@ recursive-include licenses *
 recursive-include cextern *
 recursive-include scripts *
 recursive-include **tests/data/*
+recursive-include tests/data/*
 
 prune build
 prune docs/_build
