Refactor for sunpy 2.1 changes

--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ include_package_data = True
 setup_requires =
   setuptools_scm
 install_requires =
-  sunpy[net]
+  sunpy[net]>=2.1.rc3
 
 [options.packages.find]
 exclude = radiospectra._dev
