--- a/setup.cfg
+++ b/setup.cfg
@@ -33,7 +33,7 @@ include_package_data = True
 setup_requires =
   setuptools_scm
 install_requires =
-  sunpy[net]>=2.1.rc3
+  sunpy[net]>=2.1.1
   numpy<1.20.0
   matplotlib
   scipy
