--- a/setup.cfg
+++ b/setup.cfg
@@ -23,6 +23,7 @@ classifiers =
   Programming Language :: Python :: 3
   Programming Language :: Python :: 3.7
   Programming Language :: Python :: 3.8
+  Programming Language :: Python :: 3.9
   Topic :: Scientific/Engineering :: Physics
 
 [options]
@@ -47,9 +48,10 @@ tests =
   pytest-doctestplus >= 0.5 # We require the newest version of doctest plus to use +IGNORE_WARNINGS
   tox
 docs =
-  sphinx>=2
   sphinx-automodapi
+  sphinx-changelog
   sphinx-gallery>=0.7.0 # First to include the mini-galleries directive
+  sphinx>=3
   sunpy-sphinx-theme
   towncrier
 
