--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,10 @@ envlist =
     build_docs
     codestyle
     conda
+requires =
+    setuptools >= 30.3.0
+    pip >= 19.3.1
+    tox-pypi-filter >= 0.12
 isolated_build = true
 
 [testenv]
