--- a/tox.ini
+++ b/tox.ini
@@ -11,7 +11,7 @@ requires =
 isolated_build = true
 
 [testenv]
-pypi_filter = https://raw.githubusercontent.com/sunpy/sunpy/master/.test_package_pins.txt
+pypi_filter = https://raw.githubusercontent.com/sunpy/sunpy/main/.test_package_pins.txt
 # We use bash in some of our environments so we have to whitelist it.
 whitelist_externals=
     /bin/bash
