--- a/setup.cfg
+++ b/setup.cfg
@@ -64,7 +64,7 @@ testpaths = "radiospectra" "docs"
 norecursedirs = ".tox" "build" "docs[\/]_build" "docs[\/]generated" "*.egg-info" "examples" ".jupyter" ".history" "tools" "radiospectra[\/]_dev"
 doctest_plus = enabled
 doctest_optionflags = NORMALIZE_WHITESPACE FLOAT_CMP ELLIPSIS
-addopts = --doctest-rst --doctest-ignore-import-errors
+addopts = --doctest-rst --doctest-ignore-import-errors -p no:unraisableexception -p no:threadexception
 markers =
     remote_data: marks this test function as needing remote data.
     online: marks this test function as needing online connectivity.
