pre-commit update and update tests for devdeps

--- a/setup.cfg
+++ b/setup.cfg
@@ -107,6 +107,8 @@ filterwarnings =
     ignore:Distutils was imported before Setuptools
     # toolz internal deprecation warning https://github.com/pytoolz/toolz/issues/500
     ignore:The toolz.compatibility module is no longer needed:DeprecationWarning
+    # Fix before sunpy 4.1
+    ignore:The Scraper class is deprecated and may be removed in version 4.1.:sunpy.util.exceptions.SunpyDeprecationWarning
 
 [pycodestyle]
 max_line_length = 100
