--- a/tox.ini
+++ b/tox.ini
@@ -1,32 +1,20 @@
 [tox]
 envlist =
-    py{37,38,39}{,-oldestdeps,-devdeps,-online}
+    py{38,39,310}{,-oldestdeps,-devdeps,-online}
     build_docs
     codestyle
     conda
 requires =
-    setuptools >= 30.3.0
+    setuptools >=56, !=61.0.0
     pip >= 19.3.1
     tox-pypi-filter >= 0.12
 isolated_build = true
 
 [testenv]
 pypi_filter = https://raw.githubusercontent.com/sunpy/sunpy/main/.test_package_pins.txt
-# We use bash in some of our environments so we have to whitelist it.
-whitelist_externals=
-    /bin/bash
-    /usr/bin/bash
 # Run the tests in a temporary directory to make sure that we don't import
 # sunpy from the source tree
 changedir = .tmp/{envname}
-# tox environments are constructed with so-called 'factors' (or terms)
-# separated by hyphens, e.g. test-devdeps-cov. Lines below starting with factor:
-# will only take effect if that factor is included in the environment name. To
-# see a list of example environments that can be run, along with a description,
-# run:
-#
-#     tox -l -v
-#
 description =
     run tests
     devdeps: with the latest developer version of key dependencies
@@ -56,12 +44,8 @@ deps =
     devdeps: git+https://github.com/sunpy/sunpy
     devdeps: matplotlib
     devdeps: scipy
-
-    # Until scikit-image 0.19 is out.
-    py39: numpy
-
     # Oldest deps we pin against.
-    oldestdeps: sunpy<2.1
+    oldestdeps: sunpy<4.1
     # These are specific online extras we use to run the online tests.
     online: pytest-rerunfailures
     online: pytest-timeout
@@ -76,7 +60,8 @@ commands =
 [testenv:build_docs]
 changedir = docs
 description = Invoke sphinx-build to build the HTML docs
-extras = dev
+extras =
+    dev
 commands =
     sphinx-build -j auto --color -W --keep-going -b html -d _build/.doctrees . _build/html {posargs}
     python -c 'import pathlib; print("Documentation available under file://\{0\}".format(pathlib.Path(r"{toxinidir}") / "docs" / "_build" / "index.html"))'
@@ -94,7 +79,7 @@ commands =
 # This env requires tox-conda.
 [testenv:conda]
 pypi_filter =
-basepython = python3.8
+basepython = python3.9
 extras =
 deps =
 conda_deps =
