--- a/setup.cfg
+++ b/setup.cfg
@@ -106,6 +106,7 @@ filterwarnings =
     ignore:Distutils was imported before Setuptools
     # toolz internal deprecation warning https://github.com/pytoolz/toolz/issues/500
     ignore:The toolz.compatibility module is no longer needed:DeprecationWarning
+    ignore:distutils Version classes are deprecated. Use packaging.version instead.
 
 [pycodestyle]
 max_line_length = 100
