--- a/.readthedocs.yml
+++ b/.readthedocs.yml
@@ -1,11 +1,20 @@
 version: 2
+build:
+  os: ubuntu-20.04
+  tools:
+    python: "3.9"
+  apt_packages:
+    - graphviz
+
+sphinx:
+  builder: html
+  configuration: docs/conf.py
+  fail_on_warning: false
 
 python:
-   version: 3.8
    install:
-      # Use this to override dep versions.
-      - requirements: docs/rtd_requirements.txt
-      - method: pip
-        path: .
-        extra_requirements:
-           - dev
+     - method: pip
+       extra_requirements:
+        - all
+        - docs
+       path: .
