tidy up readme and docs a bit

--- a/setup.cfg
+++ b/setup.cfg
@@ -7,7 +7,7 @@ long_description_content_type = text/x-rst
 author = The SunPy Community
 author_email = sunpy@googlegroups.com
 license = BSD 2-Clause
-license_file = LICENSE.rst
+license_files = LICENSE.rst
 url = https://sunpy.org
 edit_on_github = True
 github_project = sunpy/radiospectra
@@ -79,34 +79,12 @@ filterwarnings =
     # is being ignored
     #
     #
-    # See https://github.com/spacetelescope/asdf/issues/789
-    ignore:direct construction of AsdfSchemaFile has been deprecated
-    ignore:direct construction of AsdfSchemaItem has been deprecated
-    ignore:direct construction of AsdfSchemaExampleItem has been deprecated
-    # See https://github.com/Cadair/parfive/issues/41
-    ignore:The loop argument is deprecated
     # This is due to dependencies building with a numpy version different from
     # the local installed numpy version, but should be fine
     # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
     ignore:numpy.ufunc size changed:RuntimeWarning
     ignore:numpy.ndarray size changed:RuntimeWarning
-    # See https://github.com/mvantellingen/python-zeep/issues/956
-    ignore:defusedxml.lxml is no longer supported:DeprecationWarning
-    # See https://github.com/aio-libs/aiohttp/issues/4842
-    ignore:"@coroutine" decorator is deprecated
-    # See https://github.com/spacetelescope/asdf/issues/789
-    ignore:direct construction of AsdfSchemaFile has been deprecated
-    ignore:direct construction of AsdfSchemaItem has been deprecated
-    ignore:direct construction of AsdfSchemaExampleItem has been deprecated
-    # See https://github.com/scikit-image/scikit-image/issues/4848
-    ignore:Converting `np.inexact` or `np.floating` to a dtype is deprecated
-    # See https://github.com/astropy/astropy/pull/10570
-    ignore:leap-second auto-update failed
-    # See https://github.com/astropy/extension-helpers/issues/23
-    ignore:Distutils was imported before Setuptools
-    # toolz internal deprecation warning https://github.com/pytoolz/toolz/issues/500
-    ignore:The toolz.compatibility module is no longer needed:DeprecationWarning
-    ignore:distutils Version classes are deprecated. Use packaging.version instead.
+
 
 [pycodestyle]
 max_line_length = 100
