--- a/tox.ini
+++ b/tox.ini
@@ -1,9 +1,8 @@
 [tox]
 envlist =
-    py{38,39,310}{,-oldestdeps,-devdeps,-online}
+    py{38,39,310,311}{,-oldestdeps,-devdeps,-online,-rc,-conda}
     build_docs
     codestyle
-    conda
 requires =
     setuptools >=56, !=61.0.0
     pip >= 19.3.1
@@ -33,25 +32,15 @@ passenv =
     NO_PROXY
     CIRCLECI
 deps =
-    # We need this for some packages.
     setuptools
-    # All our tests run in parallel which this plugin allows us to.
     pytest-xdist
-    # Since xdist uses stdout in order for it to work, we have to bypass this and use to
-    # capture any logging we might put in a test for debugging.
-    pytest-logger
-    # The devdeps factor is intended to be used to install the latest developer version.
-    # of key dependencies.
     devdeps: git+https://github.com/sunpy/sunpy
     devdeps: matplotlib
     devdeps: scipy
-    # Oldest deps we pin against.
     oldestdeps: sunpy<4.1
-    # These are specific online extras we use to run the online tests.
     online: pytest-rerunfailures
     online: pytest-timeout
-# The following indicates which extras_require from setup.cfg will be installed
-# dev is special in that it installs everything
+    rc: sunpy>=0.0.dev0
 extras =
     dev
 commands =
@@ -78,9 +67,8 @@ commands =
     pre-commit run --verbose --all-files --show-diff-on-failure
 
 # This env requires tox-conda.
-[testenv:py39-conda]
+[testenv:conda]
 pypi_filter =
-basepython = python3.9
 extras =
 deps =
 conda_deps =
