--- a/setup.cfg
+++ b/setup.cfg
@@ -85,6 +85,8 @@ filterwarnings =
     # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
     ignore:numpy.ufunc size changed:RuntimeWarning
     ignore:numpy.ndarray size changed:RuntimeWarning
+    # Zeep
+    ignore:'cgi' is deprecated:DeprecationWarning
 
 [pycodestyle]
 max_line_length = 100
