--- a/setup.cfg
+++ b/setup.cfg
@@ -73,7 +73,6 @@ remote_data_strict = True
 junit_family=xunit1
 filterwarnings =
     error
-    error::sunpy.util.exceptions.SunpyDeprecationWarning
     #
     # A list of warnings to ignore follows. If you add to this list, you MUST
     # add a comment or ideally a link to an issue that explains why the warning
@@ -85,6 +84,8 @@ filterwarnings =
     # See https://github.com/numpy/numpy/issues/15748#issuecomment-598584838
     ignore:numpy.ufunc size changed:RuntimeWarning
     ignore:numpy.ndarray size changed:RuntimeWarning
+    # Zeep
+    ignore:'cgi' is deprecated:DeprecationWarning
 
 [pycodestyle]
 max_line_length = 100
