Fix pytest 3.10 issue

--- a/setup.cfg
+++ b/setup.cfg
@@ -86,6 +86,8 @@ filterwarnings =
     ignore:numpy.ndarray size changed:RuntimeWarning
     # Zeep
     ignore:'cgi' is deprecated:DeprecationWarning
+    # Issue with pytest-cov injecting --rsync arg https://github.com/pytest-dev/pytest-xdist/issues/825
+    ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning
 
 [pycodestyle]
 max_line_length = 100
