Fix more issues on 3.10 tests

--- a/setup.cfg
+++ b/setup.cfg
@@ -51,6 +51,8 @@ tests =
   sunpy-soar
 docs =
   sphinx-automodapi
+  # Remove next line when fixed in towncrier; see https://github.com/twisted/towncrier/issues/528
+  importlib-resources<6
   sphinx-changelog
   sphinx-gallery
   sphinx
