precommit and online fail

--- a/setup.cfg
+++ b/setup.cfg
@@ -90,6 +90,7 @@ filterwarnings =
     # Issue with pytest-cov injecting --rsync arg https://github.com/pytest-dev/pytest-xdist/issues/825
     # https://github.com/pytest-dev/pytest-cov/issues/557
     ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning
+    ignore:File may have been truncated.*
 
 [pycodestyle]
 max_line_length = 100
