--- a/tox.ini
+++ b/tox.ini
@@ -1,51 +1,72 @@
 [tox]
-minversion = 4.0.0
-envlist =
-    py{310,311,312}{,-oldestdeps,-devdeps,-online}
-    build_docs
-    codestyle
+min_version = 4.0
 requires =
-    tox-pypi-filter
+    tox-pypi-filter>=0.14
+envlist =
+    py{310,311,312}
+    py312-devdeps
+    py310-oldestdeps
+    codestyle
+    build_docs
 
 [testenv]
 pypi_filter = https://raw.githubusercontent.com/sunpy/sunpy/main/.test_package_pins.txt
-changedir = .tmp/{envname}
+# Run the tests in a temporary directory to make sure that we don't import
+# the package from the source tree
+change_dir = .tmp/{envname}
 description =
     run tests
-    devdeps: with the latest developer version of key dependencies
     oldestdeps: with the oldest supported version of key dependencies
-    online: that require remote data
-setenv =
+    devdeps: with the latest developer version of key dependencies
+pass_env =
+    # A variable to tell tests we are on a CI system
+    CI
+    # Custom compiler locations (such as ccache)
+    CC
+    # Location of locales (needed by sphinx on some systems)
+    LOCALE_ARCHIVE
+    # If the user has set a LC override we should follow it
+    LC_ALL
+set_env =
     MPLBACKEND = agg
     COLUMNS = 180
     PARFIVE_HIDE_PROGRESS = True
-    PYTEST_COMMAND = pytest -vvv -s -ra --pyargs radiospectra --cov-report=xml --cov=radiospectra --cov-config={toxinidir}/setup.cfg {toxinidir}/docs
     devdeps,build_docs,online: HOME = {envtmpdir}
     SUNPY_SAMPLEDIR = {env:SUNPY_SAMPLEDIR:{toxinidir}/.tox/{envname}/sample_data/}
     devdeps: PIP_EXTRA_INDEX_URL = https://pypi.anaconda.org/astropy/simple https://pypi.anaconda.org/scientific-python-nightly-wheels/simple
 deps =
+    # For packages which publish nightly wheels this will pull the latest nightly
+    devdeps: numpy>=0.0.dev0
     devdeps: git+https://github.com/sunpy/sunpy
     devdeps: matplotlib>=0.0.dev0
     devdeps: scipy>=0.0.dev0
-    oldestdeps: sunpy<5.1
+    # Packages without nightly wheels will be built from source like this
+    # devdeps: git+https://github.com/ndcube/ndcube
+    oldestdeps: minimum_dependencies
     online: pytest-rerunfailures
     online: pytest-timeout
+# The following indicates which extras_require will be installed
 extras =
     all
     tests
+commands_pre =
+    oldestdeps: minimum_dependencies radiospectra --filename requirements-min.txt
+    oldestdeps: pip install -r requirements-min.txt
+    pip freeze --all --no-input
 commands =
+    # To amend the pytest command for different factors you can add a line
+    # which starts with a factor like `online: --remote-data=any \`
+    # If you have no factors which require different commands this is all you need:
     !online-!hypothesis-!figure: {env:PYTEST_COMMAND} {posargs}
-    online: {env:PYTEST_COMMAND} --reruns 2 --timeout=180 --remote-data=any {posargs}
-
-[testenv:build_docs]
-changedir = docs
-description = Invoke sphinx-build to build the HTML docs
-extras =
-    all
-    docs
-commands =
-    sphinx-build --color -W --keep-going -b html -d _build/.doctrees . _build/html {posargs}
-    python -c 'import pathlib; print("Documentation available under file://\{0\}".format(pathlib.Path(r"{toxinidir}") / "docs" / "_build" / "index.html"))'
+    pytest \
+    -vvv \
+    -r fEs \
+    --pyargs radiospectra \
+    --cov-report=xml \
+    --cov=radiospectra \
+    --cov-config={toxinidir}/.coveragerc \
+    {toxinidir}/docs \
+    {posargs}
 
 [testenv:codestyle]
 pypi_filter =
@@ -55,4 +76,13 @@ deps =
     pre-commit
 commands =
     pre-commit install-hooks
-    pre-commit run --verbose --all-files --show-diff-on-failure
+    pre-commit run --color always --all-files --show-diff-on-failure
+
+[testenv:build_docs]
+description = invoke sphinx-build to build the HTML docs
+change_dir =
+    docs
+extras =
+    docs
+commands =
+    sphinx-build -j auto --color -W --keep-going -b html -d _build/.doctrees . _build/html {posargs}
