--- a/pytest.ini
+++ b/pytest.ini
@@ -40,3 +40,4 @@ filterwarnings =
     # https://github.com/pytest-dev/pytest-cov/issues/557
     ignore:The --rsyncdir command line argument and rsyncdirs config variable are deprecated.:DeprecationWarning
     ignore:File may have been truncated.*
+    ignore:pattern has been replaced with the format keyword
