Update pre-commit config to ignore exploration scripts

--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,6 +30,7 @@ repos:
     hooks:
       - id: codespell
         args: [ "--write-changes" ]
+exclude: "^(check_scraper|reproduce_|test_issue_|prototype_slicing|test_prototype).*\\.py$"
 ci:
   autofix_prs: false
   autoupdate_schedule: "quarterly"
